Zbieranie informacji o populacjach oraz rysowanie wykresow

--- a/MIO/MIO.csproj
+++ b/MIO/MIO.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ScottPlot" Version="5.0.34" />
+    <PackageReference Include="ScottPlot.WinForms" Version="5.0.34" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\kod\kod.csproj" />
   </ItemGroup>
 
